--- a/module-a/pom.xml
+++ b/module-a/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>com.ianbrandt.pmd</groupId>
-		<artifactId>pmd-eclipse-test</artifactId>
+		<artifactId>eclipse-pmd-test</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
